97.Bitflyer API Auth and GetBalance API

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
-[web]
-port = 8080
+[bitflyer]
+api_key = xxx
+api_secret = xxx
 
-[db]
-name = stockdata.sql
-driver = sqlite3
+[gotrading]
+log_file = gotrading.log
